--- a/src/main/resources/testdata/default.properties
+++ b/src/main/resources/testdata/default.properties
@@ -1,5 +1,23 @@
 homepage.url=https://www.amazon.com/
 homepage.title=Amazon.com: Online Shopping for Electronics, Apparel, Computers, Books, DVDs & more
 
-currencyPage.title="Change Language & Currency Settings"
-currencyPage.message="Note: You will be shown prices in € - EUR - Euro on www.amazon.com as a reference only. You may or may not be able to pay in € - EUR - Euro see more details during checkout."
+name=John
+email=demo@demo.com
+password=password
+incotect_password=password1!
+
+signInPage.errorMsg=Enter the characters as they are given in the challenge.
+
+createAccount.errorMsg=Passwords must match
+
+currencyPage.title=Change Language & Currency Settings
+currencyPage.currency=€ - EUR - Euro
+currencyPage.message=Note: You will be shown prices in € - EUR - Euro on www.amazon.com as a reference only. You may or \
+  may not be able to pay in € - EUR - Euro see more details during checkout.
+currencyPage.messageShort=Note: You will be shown prices in
+
+search.item=Jordan Peterson
+search.items=Beyond Order: 12 More Rules for Life, 12 Rules for Life: An Antidote to Chaos, Maps of Meaning
+search.itemTitle=Beyond Order: 12 More Rules for Life
+
+cart.message=Subtotal (2 items): $34.80
