--- a/src/main/resources/testdata/default.properties
+++ b/src/main/resources/testdata/default.properties
@@ -4,7 +4,7 @@ homepage.title=Amazon.com: Online Shopping for Electronics, Apparel, Computers, 
 name=John
 email=demo@demo.com
 password=password
-incotect_password=password1!
+incorrect_password=password1!
 
 signInPage.errorMsg=Enter the characters as they are given in the challenge.
 
@@ -16,8 +16,11 @@ currencyPage.message=Note: You will be shown prices in € - EUR - Euro on www.a
   may not be able to pay in € - EUR - Euro see more details during checkout.
 currencyPage.messageShort=Note: You will be shown prices in
 
-search.item=Jordan Peterson
-search.items=Beyond Order: 12 More Rules for Life, 12 Rules for Life: An Antidote to Chaos, Maps of Meaning
+search.phrase=Jordan Peterson
+expected.items=Beyond Order: 12 More Rules for Life,\
+  \ 12 Rules for Life: An Antidote to Chaos,\
+  \ Maps of Meaning,\
+  \ The Rise Of Jordan Peterson
 search.itemTitle=Beyond Order: 12 More Rules for Life
 
-cart.message=Subtotal (2 items): $34.80
+cart.message=Subtotal (2 Items) $34.80
